--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -3,60 +3,60 @@
 en:
   devise:
     confirmations:
-      confirmed: "Your email address has been successfully confirmed."
-      send_instructions: "You will receive an email with instructions for how to confirm your email address in a few minutes."
-      send_paranoid_instructions: "If your email address exists in our database, you will receive an email with instructions for how to confirm your email address in a few minutes."
+      confirmed: "Su dirección de correo ha sido satisfactoriamente confirmada."
+      send_instructions: "Recibirá un mensaje con las instrucciones de confirmación en pocos minutos."
+      send_paranoid_instructions: "Si su dirección de correo existe en nuestra base de datos, recibirá un mensaje con las instrucciones de confirmación en pocos minutos."
     failure:
-      already_authenticated: "You are already signed in."
-      inactive: "Your account is not activated yet."
-      invalid: "Invalid %{authentication_keys} or password."
-      locked: "Your account is locked."
-      last_attempt: "You have one more attempt before your account is locked."
-      not_found_in_database: "Invalid %{authentication_keys} or password."
-      timeout: "Your session expired. Please sign in again to continue."
-      unauthenticated: "You need to sign in or sign up before continuing."
-      unconfirmed: "You have to confirm your email address before continuing."
+      already_authenticated: "Estas logueado."
+      inactive: "Su cuenta aún no está activada."
+      invalid: "Inválido %{authentication_keys} o contraseña."
+      locked: "Su cuenta está bloqueada."
+      last_attempt: "Tienes una oportunidad más antes de que tu cuenta se bloquee."
+      not_found_in_database: "Inválido %{authentication_keys} o contraseña."
+      timeout: "Su sessión ha expirado. Por favor ingrese nuevamente para continuar."
+      unauthenticated: "Necesitas ingresar o registrarte antes de continuar."
+      unconfirmed: "Tienes que confirmar tu correo antes de continuar."
     mailer:
       confirmation_instructions:
-        subject: "Confirmation instructions"
+        subject: "Instrucciones de confirmación"
       reset_password_instructions:
-        subject: "Reset password instructions"
+        subject: "Instrucciones para reestablecer contraseña"
       unlock_instructions:
-        subject: "Unlock instructions"
+        subject: "Instrucciones bloqueadas"
       password_change:
-        subject: "Password Changed"
+        subject: "Contraseña cambiada"
     omniauth_callbacks:
-      failure: "Could not authenticate you from %{kind} because \"%{reason}\"."
-      success: "Successfully authenticated from %{kind} account."
+      failure: "No puede autenticar su %{kind} porque \"%{reason}\"."
+      success: "Satisfactoriamente autenticado su %{kind} cuenta."
     passwords:
-      no_token: "You can't access this page without coming from a password reset email. If you do come from a password reset email, please make sure you used the full URL provided."
-      send_instructions: "You will receive an email with instructions on how to reset your password in a few minutes."
-      send_paranoid_instructions: "If your email address exists in our database, you will receive a password recovery link at your email address in a few minutes."
-      updated: "Your password has been changed successfully. You are now signed in."
-      updated_not_active: "Your password has been changed successfully."
+      no_token: "No se puede acceder a esta página sin que reciva un correo de restablecimiento de contraseña. Si recibe un correo de restablecimiento de contraseña, por favor asegúrese de que ha utilizado la URL completa proporcionada."
+      send_instructions: "Recibirá un correo con instrucciones sobre como reestablecer su contraseña en pocos minutos."
+      send_paranoid_instructions: "Si su correo existe en nuestra base de datos, usted recibirá un enlace de recuperación de la contraseña a su dirección de correo electrónico en unos pocos minutos."
+      updated: "Su contraseña ha sido cambiada satisfactoriamente. Ahora debes iniciar sessión."
+      updated_not_active: "Su contraseña ha sido cambiada satisfactoriamente."
     registrations:
-      destroyed: "Bye! Your account has been successfully cancelled. We hope to see you again soon."
-      signed_up: "Welcome! You have signed up successfully."
-      signed_up_but_inactive: "You have signed up successfully. However, we could not sign you in because your account is not yet activated."
-      signed_up_but_locked: "You have signed up successfully. However, we could not sign you in because your account is locked."
-      signed_up_but_unconfirmed: "A message with a confirmation link has been sent to your email address. Please follow the link to activate your account."
-      update_needs_confirmation: "You updated your account successfully, but we need to verify your new email address. Please check your email and follow the confirm link to confirm your new email address."
-      updated: "Your account has been updated successfully."
+      destroyed: "Adiós! Su cuenta ha sido satisfactoriamente eliminada. Esperamos volver a verte pronto."
+      signed_up: "Bienvenido! Te has logueado satisfactoriamente."
+      signed_up_but_inactive: "Te has registrado satisfactoriamente. Sin embargo, no se puede iniciar sesión porque la cuenta aún no está activada."
+      signed_up_but_locked: "Te has registrado satisfactoriamente. Sin embargo, no se ha podido iniciar sesión debido a que su cuenta está bloqueada."
+      signed_up_but_unconfirmed: "Un mensaje con un enlace de confirmación ha sido enviado a su dirección de correo electrónico . Por favor, siga el enlace para activar su cuenta."
+      update_needs_confirmation: "Ha actualizado su cuenta con éxito, pero necesita verificar su nueva dirección de correo electrónico. Por favor, consultar su correo electrónico y siga el enlace de confirmación para activar su nueva dirección de correo electrónico."
+      updated: "Su cuenta ha sido satisfactoriamente actualizada."
     sessions:
-      signed_in: "Signed in successfully."
-      signed_out: "Signed out successfully."
-      already_signed_out: "Signed out successfully."
+      signed_in: "Logueado satisfactoriamente."
+      signed_out: "Sessión cerrada satisfactoriamente."
+      already_signed_out: "Sessión cerrada satisfactoriamente."
     unlocks:
-      send_instructions: "You will receive an email with instructions for how to unlock your account in a few minutes."
-      send_paranoid_instructions: "If your account exists, you will receive an email with instructions for how to unlock it in a few minutes."
-      unlocked: "Your account has been unlocked successfully. Please sign in to continue."
+      send_instructions: "Recibirá un mensaje con las instrucciones de como desbloquer su cuenta en pocos minutos."
+      send_paranoid_instructions: "Si su cuenta existe, recibirá un mensaje con las instrucciones de como desbloquear esto en pocos minutos."
+      unlocked: "Su cuenta ha sido desbloqueda satisfactoriamente. Por favor inicie sessión para continuar."
   errors:
     messages:
-      already_confirmed: "was already confirmed, please try signing in"
-      confirmation_period_expired: "needs to be confirmed within %{period}, please request a new one"
-      expired: "has expired, please request a new one"
-      not_found: "not found"
-      not_locked: "was not locked"
+      already_confirmed: "fue confirmado, por favor pruebe iniciar sessión"
+      confirmation_period_expired: "necesita confirmar dentro de %{period}, por favor solicite uno nuevo."
+      expired: "ha expirado, por favor solicite uno nuevo"
+      not_found: "no encontrado"
+      not_locked: "no fue bloqueado"
       not_saved:
-        one: "1 error prohibited this %{resource} from being saved:"
-        other: "%{count} errors prohibited this %{resource} from being saved:"
+        one: "1 error prohibe este %{resource} de ser guardado:"
+        other: "%{count} errores prohiben este %{resource} de ser guardado:"
