--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,3 +21,14 @@
 
 en:
   hello: "Hello world"
+  date:
+    formats:
+
+    # Don't forget the nil at the beginning; there's no such thing as a 0th month
+    month_names: [~, Enero, Febrero, Marzo, Abril, Mayo, Junio, Julio, Agosto, Septiembre, Octubre, Noviembre, Diciembre]
+    abbr_month_names: [~, Ene, Feb, Mar, Abr, May, Jun, Jul, Ago, Sep, Oct, Nov, Dic]
+    # Used in date_select and datetime_select.
+    order:
+      - day
+      - month
+      - year
